--- a/theme/templates/resource-landing-page/top-right-buttons.html
+++ b/theme/templates/resource-landing-page/top-right-buttons.html
@@ -9,7 +9,7 @@
                   class="fa fa-user-plus icon-button icon-blue"></span>
             </a>
         {% endif %}
-        {% if not metadata_form %}
+        {% if not resource_edit_mode %}
             {% if not is_owner_user and not is_edit_user and not is_view_user and cm.raccess.public %}
                 {% if resource_is_mine %}
                     <form data-id="form-add-to-my-resources"
@@ -126,13 +126,6 @@
                     <span data-toggle="tooltip" data-placement="bottom" title="View resource"
                           class="glyphicon glyphicon-circle-arrow-left icon-button icon-blue"></span>
             </a>
-            {% if cm.resource_type == 'CompositeResource' %}
-                {# This form gets submitted to reload the page in edit mode when aggregation is removed or created #}
-                <form id="frm_refresh_page_edit_mode" action="{{ cm.get_absolute_url }}" method="post">
-                    {% csrf_token %}
-                    <input name="resource-mode" type="hidden" value="edit"/>
-                </form>
-            {% endif %}
         {% endif %}
     </div>
 </div>
