--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -342,146 +342,139 @@
                         </div>
                     </div>
 
-                    <form method="POST" enctype="multipart/form-data">
-{#                        {% csrf_token %}#}
-{#                        <input name="resource-mode" type="hidden" value="edit">#}
-                        <div class="modal-body">
-                            <div class="form-group">
-                                <fieldset>
-                                    <div v-if="is_person" class="control-group control-group--name">
-                                        <label for="creator-name" class="control-label requiredField">Name<span
-                                            class="asteriskField">*</span>
-                                        </label>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <fieldset>
+                                <div v-if="is_person" class="control-group control-group--name">
+                                    <label for="creator-name" class="control-label requiredField">Name<span
+                                        class="asteriskField">*</span>
+                                    </label>
 
-                                        <div class="controls">
-                                            <input v-model="author.name"
-                                                   :required="is_person ? 'required' : 'false'"
-                                                   id="creator-name"
-                                                   class="form-control input-sm textinput textInput"
-                                                   maxlength="100">
-                                        </div>
+                                    <div class="controls">
+                                        <input v-model="author.name"
+                                               :required="is_person ? 'required' : 'false'"
+                                               id="creator-name"
+                                               class="form-control input-sm textinput textInput"
+                                               maxlength="100">
                                     </div>
-
-                                    {# PROFILE URL #}
-                                    <div v-if="author.profileUrl" class="control-group control-group--description">
-                                        <label for="creator-description" class="control-label">HydroShare User
-                                            Identifier (URL)</label>
-
-                                        <div class="controls">
-                                            <input :value="author.profileUrl" id="creator-description"
-                                                   class="form-control input-sm urlinput"
-                                                   maxlength="200" type="url" readonly>
-                                        </div>
-                                    </div>
-
-                                    {# ORGANIZATION #}
-                                    <div class="control-group control-group--organization">
-                                        <label for="creator-organization" class="control-label">Organization
-                                            <span v-if="!is_person" class="asteriskField">*</span></label>
-
-                                        <div class="controls">
-                                            <input v-model="author.organization" id="creator-organization"
-                                                   :class="{requiredField: !is_person}"
-                                                   :required="is_person ? false : 'required'"
-                                                   type="text" maxlength="200"
-                                                   class="form-control input-sm textinput textInput">
-                                        </div>
-                                    </div>
-
-                                    {# EMAIL #}
-                                    <div class="control-group control-group--email">
-                                        <label for="creator-email" class="control-label">Email</label>
-
-                                        <div class="controls">
-                                            <input v-model="author.email" id="creator-email"
-                                                   class="form-control input-sm emailinput"
-                                                   maxlength="75" type="email">
-                                        </div>
-                                    </div>
-
-                                    {# ADDRESS #}
-                                    <div class="control-group control-group--address">
-                                        <label for="creator-address" class="control-label">Address</label>
-
-                                        <div class="controls">
-                                            <input v-model="author.address" id="creator-address"
-                                                   class="form-control input-sm textinput textInput"
-                                                   maxlength="250" type="text">
-                                        </div>
-                                    </div>
-
-                                    {# PHONE #}
-                                    <div class="control-group control-group--phone">
-                                        <label for="creator-phone" class="control-label">Phone</label>
-
-                                        <div class="controls">
-                                            <input v-model="author.phone" id="creator-phone"
-                                                   class="form-control input-sm textinput textInput"
-                                                   maxlength="25" type="text">
-                                        </div>
-                                    </div>
-
-                                    {# HOMEPAGE #}
-                                    <div class="control-group control-group--homepage">
-                                        <label for="creator-homepage" class="control-label">Homepage</label>
-
-                                        <div class="controls">
-                                            <input v-model="author.homepage" id="creator-homepage"
-                                                   class="form-control input-sm urlinput"
-                                                   maxlength="200" type="url">
-                                        </div>
-                                    </div>
-                                </fieldset>
-
-                                {# AUTHOR IDENTIFIERS #}
-                                <label class="control-label">Author Identifiers</label>
-                                <div class="modal-identifiers-container height-fix">
-                                    <div class="edit-identifiers-container">
-                                        <div v-for="(identifier, index) in author.identifiers" class="well">
-                                            <div style="height:22px;">
-                                                <button @click="onDeleteIdentifier(index)" type="button"
-                                                        class="close">&times;</button>
-                                            </div>
-                                            <fieldset class="select-identifier-fieldset">
-                                                <label>Identifier Name</label>
-                                                <select v-model="identifier.identifierName"
-                                                        class="form-control select-identifier">
-                                                    <option v-for="ident in identifierDict"
-                                                            :disabled="hasIdentifier(ident.value)"
-                                                            :value="ident.value">
-                                                        ${ident.title}
-                                                    </option>
-                                                </select>
-                                            </fieldset>
-
-                                            <fieldset>
-                                                <label>Identifier Link</label>
-                                                <input v-model="identifier.identifierLink"
-                                                       class="form-control identifier-link">
-                                            </fieldset>
-                                        </div>
-                                    </div>
-
-                                    <button @click="onAddIdentifier"
-                                        type="button" class="btn btn-success">
-                                        <i class="fa fa-plus" aria-hidden="true"></i> Add New
-                                    </button>
                                 </div>
+
+                                {# PROFILE URL #}
+                                <div v-if="author.profileUrl" class="control-group control-group--description">
+                                    <label for="creator-description" class="control-label">HydroShare User
+                                        Identifier (URL)</label>
+
+                                    <div class="controls">
+                                        <input :value="author.profileUrl" id="creator-description"
+                                               class="form-control input-sm urlinput"
+                                               maxlength="200" type="url" readonly>
+                                    </div>
+                                </div>
+
+                                {# ORGANIZATION #}
+                                <div class="control-group control-group--organization">
+                                    <label for="creator-organization" class="control-label">Organization
+                                        <span v-if="!is_person" class="asteriskField">*</span></label>
+
+                                    <div class="controls">
+                                        <input v-model="author.organization" id="creator-organization"
+                                               :class="{requiredField: !is_person}"
+                                               :required="is_person ? false : 'required'"
+                                               type="text" maxlength="200"
+                                               class="form-control input-sm textinput textInput">
+                                    </div>
+                                </div>
+
+                                {# EMAIL #}
+                                <div class="control-group control-group--email">
+                                    <label for="creator-email" class="control-label">Email</label>
+
+                                    <div class="controls">
+                                        <input v-model="author.email" id="creator-email"
+                                               class="form-control input-sm emailinput"
+                                               maxlength="75" type="email">
+                                    </div>
+                                </div>
+
+                                {# ADDRESS #}
+                                <div class="control-group control-group--address">
+                                    <label for="creator-address" class="control-label">Address</label>
+
+                                    <div class="controls">
+                                        <input v-model="author.address" id="creator-address"
+                                               class="form-control input-sm textinput textInput"
+                                               maxlength="250" type="text">
+                                    </div>
+                                </div>
+
+                                {# PHONE #}
+                                <div class="control-group control-group--phone">
+                                    <label for="creator-phone" class="control-label">Phone</label>
+
+                                    <div class="controls">
+                                        <input v-model="author.phone" id="creator-phone"
+                                               class="form-control input-sm textinput textInput"
+                                               maxlength="25" type="text">
+                                    </div>
+                                </div>
+
+                                {# HOMEPAGE #}
+                                <div class="control-group control-group--homepage">
+                                    <label for="creator-homepage" class="control-label">Homepage</label>
+
+                                    <div class="controls">
+                                        <input v-model="author.homepage" id="creator-homepage"
+                                               class="form-control input-sm urlinput"
+                                               maxlength="200" type="url">
+                                    </div>
+                                </div>
+                            </fieldset>
+
+                            {# AUTHOR IDENTIFIERS #}
+                            <label v-if="is_person" class="control-label">Author Identifiers</label>
+                            <div v-if="is_person" class="modal-identifiers-container height-fix">
+                                <div class="edit-identifiers-container">
+                                    <div v-for="(identifier, index) in author.identifiers" class="well">
+                                        <div style="height:22px;">
+                                            <button @click="onDeleteIdentifier(index)" type="button"
+                                                    class="close">&times;</button>
+                                        </div>
+                                        <fieldset class="select-identifier-fieldset">
+                                            <label>Identifier Name</label>
+                                            <select v-model="identifier.identifierName"
+                                                    class="form-control select-identifier">
+                                                <option v-for="ident in identifierDict"
+                                                        :disabled="hasIdentifier(ident.value)"
+                                                        :value="ident.value">
+                                                    ${ident.title}
+                                                </option>
+                                            </select>
+                                        </fieldset>
+
+                                        <fieldset>
+                                            <label>Identifier Link</label>
+                                            <input v-model="identifier.identifierLink"
+                                                   class="form-control identifier-link">
+                                        </fieldset>
+                                    </div>
+                                </div>
+
+                                <button @click="onAddIdentifier"
+                                    type="button" class="btn btn-success">
+                                    <i class="fa fa-plus" aria-hidden="true"></i> Add New
+                                </button>
                             </div>
-                        </div>
 
-                        {# Hidden in replacement for drag and drop, but still needed for form submission here #}
-{#                        <input class="hidden-form input-order" type="number">#}
-
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <button @click="onSaveAuthor"
-                                    type="button"
-    {#                                        type="submit"#}
-                                    class="btn btn-primary">Save changes
-                            </button>
                         </div>
-                    </form>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button @click="onSaveAuthor"
+                                type="button"
+                                class="btn btn-primary">Save changes
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
